tests/integrations/snapshots/integrations__ignored_nonzero_task_exit_status@stdout.snap
---
source: tests/integrations/main.rs
description: Should still succeed because the nonzero exit status was ignored.
---
            ╭─┬◀ starting
group::task │O│ hello world
            ╰─┴▶ success
