tests/integrations/snapshots/integrations__interpreter_not_found@status_code.snap
---
source: tests/integrations/main.rs
description: Should exit with an error about the interpreter not being found.
---
Some(
    1,
)
