tests/integrations/snapshots/integrations__interpreter_not_found@stderr.snap
---
source: tests/integrations/main.rs
description: Should exit with an error about the interpreter not being found.
---
Errors:
╰─► failed to run the graph
    ╰─► one or more tasks failed
        ╰─► group::task
            ╰─► failed to spawn command "thiscommandalmostcertainlydoesntexistonanyonescomputer"
                ╰─► No such file or directory (os error 2)
