tests/integrations/snapshots/integrations__interpreter_not_found@stdout.snap
---
source: tests/integrations/main.rs
description: Should exit with an error about the interpreter not being found.
---
     ╭─┬◀ starting
     ╰─┴▶ failure
