tests/integrations/snapshots/integrations__invalid_name_continue@stderr.snap
---
source: tests/integrations/main.rs
description: Should exit with an error about a non-first character in a task name not being allowed
---
Errors:
╰─► failed to load the Engage file
    ╰─► failed to deserialize the Engage file
        ╰─► TOML parse error at line 3, column 8
  |
3 | [tasks."a'"]
  |        ^^^^
'\'' at byte 1 is not allowed in a name
