tests/integrations/snapshots/integrations__invalid_name_continue@stdout.snap
---
source: tests/integrations/main.rs
description: Should exit with an error about a non-first character in a task name not being allowed
---

