tests/integrations/snapshots/integrations__invalid_name_empty@status_code.snap
---
source: tests/integrations/main.rs
description: Should exit with an error about empty task names not being allowed
---
Some(
    2,
)
