tests/integrations/snapshots/integrations__invalid_name_start@status_code.snap
---
source: tests/integrations/main.rs
description: Should exit with an error about the first character in a task name not being allowed
---
Some(
    2,
)
